# OpenCL_Benchmarker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
kernels/: advanced_filters.cl  filters.cl
scripts/: plot_crossover.py  plot_results.py
src/: comprehensive_benchmark.cpp  main.cpp
